Authentification avec bd plus des interface

--- a/ProjetPfa/Views/Acceuil/Show.cshtml
+++ b/ProjetPfa/Views/Acceuil/Show.cshtml
@@ -60,7 +60,7 @@
                                 <a class="nav-link" href="@Url.Action("Show","Contact")">Contact</a>
                             </li>
                             <li class="nav-item">
-                            <a class="nav-link" href="@Url.Action("Show", "SignIn")">Connexion</a>
+                            <a class="nav-link" href="@Url.Action("choix", "SignIn")">Connexion</a>
                             </li>
                         <li class="nav-item">
                             <a class="nav-link" href="@Url.Action("choix", "SignUp")">Inscription</a>
